# ChangeLog for media-video/totem
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.209 2008/04/10 21:18:20 eva Exp $

*totem-2.22.1 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> +totem-2.22.1.ebuild:
  bump to 2.22.1. Fix some crasher bugs.

*totem-2.20.4 (28 Mar 2008)

  28 Mar 2008; Mart Raudsepp <leio@gentoo.org> +totem-2.20.4.ebuild:
  New version for the 2.20 series - removes gnome-desktop dependency, fixes
  DVD ISO detection on some platforms, and a few corner-case crash fixes

  27 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> totem-2.22.0.ebuild:
  drop most keywords because of gst-plugins-meta dependency

*totem-2.22.0 (24 Mar 2008)

  24 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> +totem-2.22.0.ebuild:
  New version for GNOME-2.22. Lots of fixes, moved totem-pl-parser in its
  own package, new plugins (Mythtv, local search via tracker, local sharing
  via avahi).

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> totem-2.18.3.ebuild,
  totem-2.20.3.ebuild:
  Fix deps for net-libs/xulrunner and www-client/mozilla-firefox

  03 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> totem-2.20.3.ebuild:
  fix incorrect use logic, bug #211185

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> totem-2.20.3.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> totem-2.20.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> totem-2.20.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> totem-2.20.3.ebuild:
  Marking totem-2.20.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org> totem-2.20.3.ebuild:
  stable x86, bug 208366

*totem-2.20.3 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> +totem-2.20.3.ebuild:
  bump to 2.20.3
