@@ -7,4 +7,22 @@
 <longdescription>
 Totem is movie player for the GNOME desktop. It features a playlist, fullscreen mode, seek and volume controls, as well as a pretty complete keyboard navigation. It comes with added functionality such as a video thumbnailer for Nautilus, Nautilus properties tab and a webcam utility.
 </longdescription>
+<use>
+	<flag name="bluetooth">Enable support for user-presence detection via the
+		user's bluetooth handset using <pkg>net-wireless/bluez-libs</pkg></flag>
+	<flag name="galago">Allow Totem to set your IM client to "away" when a movie
+		is playing in fullscreen using <pkg>dev-libs/libgalago</pkg></flag>
+	<flag name="lirc">Enable support for controlling Totem with a remote control
+		using <pkg>app-misc/lirc</pkg></flag>
+	<flag name="nsplugin">Build media plugin for Mozilla-based browsers such as
+		<pkg>www-client/mozilla-firefox</pkg></flag>
+	<flag name="nvtv">Enable support for TV-output with <pkg>media-tv/nvtv</pkg></flag>
+	<flag name="python">Build support for <pkg>dev-lang/python</pkg> plugins</flag>
+	<flag name="seamonkey">same as nsplugin description but build against
+		<pkg>www-client/seamonkey</pkg></flag>
+	<flag name="tracker">Enable support for searching media files using the
+		indexer	<pkg>app-misc/tracker</pkg></flag>
+	<flag name="xulrunner">same as nsplugin description but build against
+		<pkg>net-libs/xulrunner</pkg></flag>
+</use>
 </pkgmetadata>
