@@ -1,6 +1,10 @@
 # ChangeLog for media-video/totem
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.209 2008/04/10 21:18:20 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.210 2008/04/14 21:29:53 eva Exp $
+
+  14 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
+  integrate USE flag documentation from bheekling's and Ford_Prefect's
+  effort.
 
 *totem-2.22.1 (10 Apr 2008)
 
